@@ -724,4 +724,10 @@ INSERT INTO `gibbonAction` (`gibbonModuleID`, `name`, `precedence`, `category`, 
 INSERT INTO `gibbonPermission` (`permissionID` ,`gibbonRoleID` ,`gibbonActionID`) VALUES (NULL , '1', (SELECT gibbonActionID FROM gibbonAction JOIN gibbonModule ON (gibbonAction.gibbonModuleID=gibbonModule.gibbonModuleID) WHERE gibbonModule.name='Activities' AND gibbonAction.name='Enter Activity Attendance_leader')), (NULL , '2', (SELECT gibbonActionID FROM gibbonAction JOIN gibbonModule ON (gibbonAction.gibbonModuleID=gibbonModule.gibbonModuleID) WHERE gibbonModule.name='Activities' AND gibbonAction.name='Enter Activity Attendance_leader'));end
 UPDATE `gibbonAction` SET precedence = 1 WHERE name = 'Enter Activity Attendance' AND gibbonModuleID = (SELECT gibbonModuleID FROM gibbonModule WHERE name='Activities');end
 UPDATE gibbonAction SET description='Record student attendance for activities you organise, coach or assist in.' WHERE gibbonModuleID=(SELECT gibbonModuleID FROM gibbonModule WHERE name='Activities') AND (name='Enter Activity Attendance_leader');end
+ALTER TABLE `gibbonLanguage` ADD UNIQUE (`name`);end
+INSERT IGNORE INTO `gibbonLanguage` (`name`) VALUES ('Myanmar'), ('Burmese'), ('Filipino');end
+UPDATE `gibbonLanguage` SET `name`='Croatian' WHERE `gibbonLanguageID`='0012';end
+UPDATE `gibbonLanguage` SET `name`='Ukrainian' WHERE `gibbonLanguageID`='0068';end
+UPDATE `gibbonLanguage` SET `name` = 'Swedish' WHERE `gibbonLanguageID` = 0060;end
+UPDATE `gibbonCountry` SET iddCountryCode='95' WHERE `printable_name`='Myanmar';end
 ";
